--- a/_posts/2018-02-08-NAE.md
+++ b/_posts/2018-02-08-NAE.md
@@ -2,6 +2,7 @@
 layout: post
 title: "PROF. WORK RECEIVES A GILBRETH LECTURESHIP BY THE NATIONAL ACADEMY OF ENGINEERING"
 excerpt: "Prof. Work received the lectureship for his contributions to transportation engineering and presentation of a lecture on mobile sensing and control of vehicular traffic at the 2018 NAE National Meeting."
+date: 2018-02-08
 image: "/images/NAE2018.jpg"
 ---
 
