--- a/_posts/2018-05-14-Memento.md
+++ b/_posts/2018-05-14-Memento.md
@@ -7,4 +7,4 @@ image: "/images/InriaVanderbiltTeam2018.jpg"
 ---
 
 
-The project is a collaboration led by Dr. Maria Laura Delle Monache (http://necs.inrialpes.fr/people/mldellemonache/index.html) to develop the next generation of models and systems tools to understand the future of traffic. Maria Laura and [Dr. Thibault Laird]( https://sites.google.com/view/thibault-liard) will be visiting for one week and one month respectively to launch the project!
+The project is a collaboration led by [Dr. Maria Laura Delle Monache](http://necs.inrialpes.fr/people/mldellemonache/index.html) to develop the next generation of models and systems tools to understand the future of traffic. Maria Laura and [Dr. Thibault Laird](https://sites.google.com/view/thibault-liard) will be visiting for one week and one month respectively to launch the project!
