--- a/_posts/2019-06-18-ICROMA.md
+++ b/_posts/2019-06-18-ICROMA.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "RailNorrkoping"
+title: "Rail-Norrkoping"
 excerpt: "Will Barbour presents 'Data reconciliation of freight rail dispatch data' at the International Conference on Railway Operations Modelling and Analysis."
 date: 2019-06-18
 image: "/images/ICROMA2019.jpeg"
