--- a/_bibliography/conference.bib
+++ b/_bibliography/conference.bib
@@ -1,14 +1,26 @@
-@INPROCEEDINGS{8569406, 
-author={W. {Barbour} and C. {Samal} and S. {Kuppa} and A. {Dubey} and D. B. {Work}}, 
-booktitle={2018 21st International Conference on Intelligent Transportation Systems (ITSC)}, 
-title={On the Data-Driven Prediction of Arrival Times for Freight Trains on U.S. Railroads}, 
-year={2018}, 
-volume={}, 
-number={}, 
-pages={2289-2296}, 
-keywords={customer services;learning (artificial intelligence);neural nets;railways;regression analysis;support vector machines;accurate estimated times;train arrival times;United States;freight railroads;pre-dominantly single-track network topology;high capacity utilization;freight trains;data-driven prediction;average error reduction;random forest models;maximum ETA error reduction;historical data;deep neural network models;random forest regression;nonlinear support vector regression;predictive performance;periodic ETA predictions;network track segment;individual trains;machine learning framework;historical railroad operational data;machine learning algorithms;customer service;Predictive models;Data models;Delays;Rails;Machine learning;Support vector machines;Neural networks}, 
-doi={10.1109/ITSC.2018.8569406}, 
-ISSN={}, 
+@inproceedings{barbour2019data,
+author = {Barbour, William and Kuppa, Shankara and Work, Daniel B.},
+title = {Data reconciliation of freight rail dispatch data},
+booktitle = {RailNorrköping 2019. 8th International Conference on Railway Operations Modelling and Analysis (ICROMA), Norrköping, Sweden, June 17th – 20th, 2019},
+number = {69},
+pages = {99-118},
+publisher = {Linköping University Electronic Press, Linköpings universitet},
+year = {2019},
+issn = {1650-3740},
+url = {http://www.ep.liu.se/ecp/069/007/ecp19069007.pdf}
+}
+
+@INPROCEEDINGS{8569406,
+author={W. {Barbour} and C. {Samal} and S. {Kuppa} and A. {Dubey} and D. B. {Work}},
+booktitle={2018 21st International Conference on Intelligent Transportation Systems (ITSC)},
+title={On the Data-Driven Prediction of Arrival Times for Freight Trains on U.S. Railroads},
+year={2018},
+volume={},
+number={},
+pages={2289-2296},
+keywords={customer services;learning (artificial intelligence);neural nets;railways;regression analysis;support vector machines;accurate estimated times;train arrival times;United States;freight railroads;pre-dominantly single-track network topology;high capacity utilization;freight trains;data-driven prediction;average error reduction;random forest models;maximum ETA error reduction;historical data;deep neural network models;random forest regression;nonlinear support vector regression;predictive performance;periodic ETA predictions;network track segment;individual trains;machine learning framework;historical railroad operational data;machine learning algorithms;customer service;Predictive models;Data models;Delays;Rails;Machine learning;Support vector machines;Neural networks},
+doi={10.1109/ITSC.2018.8569406},
+ISSN={},
 month={Nov},}
 
 @techreport{martinez2018predicting,
@@ -17,30 +29,30 @@ month={Nov},}
   year={2018}
 }
 
-@INPROCEEDINGS{8317777, 
-author={Y. {Wu} and G. {Shindnes} and V. {Karve} and D. {Yager} and D. B. {Work} and A. {Chakraborty} and R. B. {Sowers}}, 
-booktitle={2017 IEEE 20th International Conference on Intelligent Transportation Systems (ITSC)}, 
-title={Congestion barcodes: Exploring the topology of urban congestion using persistent homology}, 
-year={2017}, 
-volume={}, 
-number={}, 
-pages={1-6}, 
-keywords={data analysis;road traffic;roads;topology;traffic engineering computing;transportation;congestion barcode;urban congestion;persistent homology;transportation networks;topological data analysis;road network connectivity;publicly available traffic dataset;New York City;Bars;Roads;Urban areas;Robustness;Topology;Merging;Conferences}, 
-doi={10.1109/ITSC.2017.8317777}, 
-ISSN={}, 
+@INPROCEEDINGS{8317777,
+author={Y. {Wu} and G. {Shindnes} and V. {Karve} and D. {Yager} and D. B. {Work} and A. {Chakraborty} and R. B. {Sowers}},
+booktitle={2017 IEEE 20th International Conference on Intelligent Transportation Systems (ITSC)},
+title={Congestion barcodes: Exploring the topology of urban congestion using persistent homology},
+year={2017},
+volume={},
+number={},
+pages={1-6},
+keywords={data analysis;road traffic;roads;topology;traffic engineering computing;transportation;congestion barcode;urban congestion;persistent homology;transportation networks;topological data analysis;road network connectivity;publicly available traffic dataset;New York City;Bars;Roads;Urban areas;Robustness;Topology;Merging;Conferences},
+doi={10.1109/ITSC.2017.8317777},
+ISSN={},
 month={Oct},}
 
-@INPROCEEDINGS{7995897, 
-author={S. {Cui} and B. {Seibold} and R. {Stern} and D. B. {Work}}, 
-booktitle={2017 IEEE Intelligent Vehicles Symposium (IV)}, 
-title={Stabilizing traffic flow via a single autonomous vehicle: Possibilities and limitations}, 
-year={2017}, 
-volume={}, 
-number={}, 
-pages={1336-1341}, 
-keywords={actuators;linear systems;mobile robots;road traffic control;road vehicles;stability;road traffic flow stabilization;single autonomous vehicle;single AV;traffic flow control;mobile actuators;car-following models;linear stability;Roads;Stability criteria;Acceleration;Vehicle dynamics;Autonomous vehicles;Eigenvalues and eigenfunctions}, 
-doi={10.1109/IVS.2017.7995897}, 
-ISSN={}, 
+@INPROCEEDINGS{7995897,
+author={S. {Cui} and B. {Seibold} and R. {Stern} and D. B. {Work}},
+booktitle={2017 IEEE Intelligent Vehicles Symposium (IV)},
+title={Stabilizing traffic flow via a single autonomous vehicle: Possibilities and limitations},
+year={2017},
+volume={},
+number={},
+pages={1336-1341},
+keywords={actuators;linear systems;mobile robots;road traffic control;road vehicles;stability;road traffic flow stabilization;single autonomous vehicle;single AV;traffic flow control;mobile actuators;car-following models;linear stability;Roads;Stability criteria;Acceleration;Vehicle dynamics;Autonomous vehicles;Eigenvalues and eigenfunctions},
+doi={10.1109/IVS.2017.7995897},
+ISSN={},
 month={June},}
 
 @inproceedings{wu:hal-01516133,
