--- a/_bibliography/journal.bib
+++ b/_bibliography/journal.bib
@@ -8,7 +8,7 @@
 
 @article{gunter2019model,
   title={Model based string stability of adaptive cruise control systems using field data},
-  author={Gunter, George and Janssen, Caroline and Barbour, William and Stern, Raphael E and Work, Daniel B},
+  author={Gunter, George and Janssen, Caroline and Barbour, William and Stern, Raphael E and Work, Daniel B.},
   journal={arXiv preprint arXiv:1902.04983},
   year={2019},
   url={https://arxiv.org/abs/1902.04983}
@@ -24,7 +24,7 @@
 
 @article{barbour2018prediction,
   title={Prediction of arrival times of freight traffic on US railroads using support vector regression},
-  author={Barbour, William and Mori, Juan Carlos Martinez and Kuppa, Shankara and Work, Daniel B},
+  author={Barbour, William and Mori, Juan Carlos Martinez and Kuppa, Shankara and Work, Daniel B.},
   journal={Transportation Research Part C: Emerging Technologies},
   volume={93},
   pages={211--227},
@@ -57,7 +57,7 @@
 
 @article{fan2017collapsed,
   title={A collapsed generalized Aw-Rascle-Zhang model and its model accuracy},
-  author={Fan, Shimao and Sun, Ye and Piccoli, Benedetto and Seibold, Benjamin and Work, Daniel B},
+  author={Fan, Shimao and Sun, Ye and Piccoli, Benedetto and Seibold, Benjamin and Work, Daniel B.},
   journal={arXiv preprint arXiv:1702.03624},
   year={2017},
   url={https://www.dropbox.com/s/lriui233tewb2nv/FanSunPiccoliSeiboldWork2017.pdf?dl=0}
@@ -65,7 +65,7 @@
 
 @article{li2018estimating,
   title={Estimating traffic conditions from smart work zone systems},
-  author={Li, Yanning and Mart{\'\i}nez Mori, Juan C and Work, Daniel B},
+  author={Li, Yanning and Mart{\'\i}nez Mori, Juan C and Work, Daniel B.},
   journal={Journal of Intelligent Transportation Systems},
   volume={22},
   number={6},
@@ -77,7 +77,7 @@
 
 @article{li2017convex,
   title={A convex formulation of traffic dynamics on transportation networks},
-  author={Li, Yanning and Claudel, Christian G and Piccoli, Benedetto and Work, Daniel B},
+  author={Li, Yanning and Claudel, Christian G and Piccoli, Benedetto and Work, Daniel B.},
   journal={SIAM journal on Applied Mathematics},
   volume={77},
   number={4},
@@ -89,7 +89,7 @@
 
 @article{wang2017comparing,
   title={Comparing traffic state estimators for mixed human and automated traffic flows},
-  author={Wang, Ren and Li, Yanning and Work, Daniel B},
+  author={Wang, Ren and Li, Yanning and Work, Daniel B.},
   journal={Transportation Research Part C: Emerging Technologies},
   volume={78},
   pages={95--110},
@@ -100,7 +100,7 @@
 
 @article{stern2017accelerated,
   title={Accelerated Monte Carlo system reliability analysis through machine-learning-based surrogate models of network connectivity},
-  author={Stern, Raphael E and Song, Junho and Work, Daniel B},
+  author={Stern, Raphael E and Song, Junho and Work, Daniel B.},
   journal={Reliability Engineering \& System Safety},
   volume={164},
   pages={1--9},
@@ -111,7 +111,7 @@
 
 @article{donovan2017empirically,
   title={Empirically quantifying city-scale transportation system resilience to extreme events},
-  author={Donovan, Brian and Work, Daniel B},
+  author={Donovan, Brian and Work, Daniel B.},
   journal={Transportation Research Part C: Emerging Technologies},
   volume={79},
   pages={333--346},
@@ -122,7 +122,7 @@
 
 @article{sun2017scaling,
   title={Scaling the Kalman filter for large-scale traffic estimation},
-  author={Sun, Ye and Work, Daniel B},
+  author={Sun, Ye and Work, Daniel B.},
   journal={IEEE Transactions on Control of Network Systems},
   volume={5},
   number={3},
@@ -134,7 +134,7 @@
 
 @article{wang2016efficient,
   title={Efficient multiple model particle filtering for joint traffic state estimation and incident detection},
-  author={Wang, Ren and Fan, Shimao and Work, Daniel B},
+  author={Wang, Ren and Fan, Shimao and Work, Daniel B.},
   journal={Transportation Research Part C: Emerging Technologies},
   volume={71},
   pages={521--537},
@@ -156,7 +156,7 @@
 
 @article{wang2016multiple,
   title={Multiple model particle filter for traffic estimation and incident detection},
-  author={Wang, Ren and Work, Daniel B and Sowers, Richard},
+  author={Wang, Ren and Work, Daniel B. and Sowers, Richard},
   journal={IEEE Transactions on Intelligent Transportation Systems},
   volume={17},
   number={12},
@@ -168,7 +168,7 @@
 
 @article{otsuka2016estimating,
   title={Estimating post-disaster traffic conditions using real-time data streams},
-  author={Otsuka, Reece P and Work, Daniel B and Song, Junho},
+  author={Otsuka, Reece P and Work, Daniel B. and Song, Junho},
   journal={Structure and Infrastructure Engineering},
   volume={12},
   number={8},
@@ -180,7 +180,7 @@
 
 @article{fan2015heterogeneous,
   title={A heterogeneous multiclass traffic flow model with creeping},
-  author={Fan, Shimao and Work, Daniel B},
+  author={Fan, Shimao and Work, Daniel B.},
   journal={SIAM Journal on Applied Mathematics},
   volume={75},
   number={2},
@@ -192,7 +192,7 @@
 
 @article{heng2014gps,
   title={GPS signal authentication from cooperative peers},
-  author={Heng, Liang and Work, Daniel B and Gao, Grace Xingxin},
+  author={Heng, Liang and Work, Daniel B. and Gao, Grace Xingxin},
   journal={IEEE Transactions on Intelligent Transportation Systems},
   volume={16},
   number={4},
@@ -204,7 +204,7 @@
 
 @article{gahrooei2014inferring,
   title={Inferring traffic signal phases from turning movement counters using hidden Markov models},
-  author={Gahrooei, Mostafa Reisi and Work, Daniel B},
+  author={Gahrooei, Mostafa Reisi and Work, Daniel B.},
   journal={IEEE Transactions on Intelligent Transportation Systems},
   volume={16},
   number={1},
@@ -216,7 +216,7 @@
 
 @article{rivera2014text,
   title={A text mining framework for advancing sustainability indicators},
-  author={Rivera, Samuel J and Minsker, Barbara S and Work, Daniel B and Roth, Dan},
+  author={Rivera, Samuel J and Minsker, Barbara S and Work, Daniel B. and Roth, Dan},
   journal={Environmental modelling \& software},
   volume={62},
   pages={128--138},
@@ -239,7 +239,7 @@
 
 @article{mazare2014computing,
   title={COMPUTING TRAVEL TIMES FROM FILTERED TRAFFIC STATES.},
-  author={Mazar{\'e}, Pierre-Emmanuel and Tossavainen, Olli-Pekka and Work, Daniel B},
+  author={Mazar{\'e}, Pierre-Emmanuel and Tossavainen, Olli-Pekka and Work, Daniel B.},
   journal={Discrete \& Continuous Dynamical Systems-Series S},
   volume={7},
   number={3},
@@ -249,7 +249,7 @@
 
 @article{tossavainen2013markov,
   title={Markov Chain Monte Carlo based inverse modeling of traffic flows using GPS data.},
-  author={Tossavainen, Olli-Pekka and Work, Daniel B},
+  author={Tossavainen, Olli-Pekka and Work, Daniel B.},
   journal={Networks \& Heterogeneous Media},
   volume={8},
   number={3},
@@ -259,7 +259,7 @@
 
 @article{blandin2013phase,
   title={Phase transition model of non-stationary traffic flow: Definition, properties and solution method},
-  author={Blandin, S{\'e}bastien and Argote, Juan and Bayen, Alexandre M and Work, Daniel B},
+  author={Blandin, S{\'e}bastien and Argote, Juan and Bayen, Alexandre M and Work, Daniel B.},
   journal={Transportation Research Part B: Methodological},
   volume={52},
   pages={31--55},
@@ -306,7 +306,7 @@
 
 @article{work2010traffic,
   title={A traffic model for velocity data assimilation},
-  author={Work, Daniel B and Blandin, S{\'e}bastien and Tossavainen, Olli-Pekka and Piccoli, Benedetto and Bayen, Alexandre M},
+  author={Work, Daniel B. and Blandin, S{\'e}bastien and Tossavainen, Olli-Pekka and Piccoli, Benedetto and Bayen, Alexandre M},
   journal={Applied Mathematics Research eXpress},
   volume={2010},
   number={1},
@@ -318,7 +318,7 @@
 
 @article{herrera2010evaluation,
   title={Evaluation of traffic data obtained via GPS-enabled mobile phones: The Mobile Century field experiment},
-  author={Herrera, Juan C and Work, Daniel B and Herring, Ryan and Ban, Xuegang Jeff and Jacobson, Quinn and Bayen, Alexandre M},
+  author={Herrera, Juan C and Work, Daniel B. and Herring, Ryan and Ban, Xuegang Jeff and Jacobson, Quinn and Bayen, Alexandre M},
   journal={Transportation Research Part C: Emerging Technologies},
   volume={18},
   number={4},
@@ -330,7 +330,7 @@
 
 @article{work2008convex,
   title={Convex formulations of air traffic flow optimization problems},
-  author={Work, Daniel B and Bayen, Alexandre M},
+  author={Work, Daniel B. and Bayen, Alexandre M},
   journal={Proceedings of the IEEE},
   volume={96},
   number={12},
