changes to journal.bib

--- a/_bibliography/journal.bib
+++ b/_bibliography/journal.bib
@@ -294,7 +294,7 @@
 
 @article{blandin2011general,
   title={A general phase transition model for vehicular traffic},
-  author={Blandin, Sebastien and Work, Dan and Goatin, Paola and Piccoli, Benedetto and Bayen, Alexandre},
+  author={Blandin, Sebastien and Work, Daniel and Goatin, Paola and Piccoli, Benedetto and Bayen, Alexandre},
   journal={SIAM journal on Applied Mathematics},
   volume={71},
   number={1},
