Preprints of various papers

--- a/_bibliography/conference.bib
+++ b/_bibliography/conference.bib
@@ -6,7 +6,7 @@
   pages = {99-118},
   year = {2019},
   issn = {1650-3740},
-  url = {http://www.ep.liu.se/ecp/069/007/ecp19069007.pdf}
+  url = {download/Lab-Work-rail_data_reconciliation.pdf}
 }
 
 @inproceedings{8569406,
@@ -16,14 +16,15 @@
   year={2018},
   pages={2289-2296},
   doi={10.1109/ITSC.2018.8569406},
-  url={https://ieeexplore.ieee.org/document/8569406}
+  url={download/Lab-Work-deep_learning_rail_eta_preprint.pdf}
 }
 
 @inproceedings{martinez2018predicting,
   title={Predicting Delay Occurrence at Freight Rail Sidings},
   author={Mart{\'\i}nez Mori, Juan Carlos and Barbour, William and Kuppa, Shankara and Work, Daniel B.},
   booktitle={Proceedings of the Transportation Research Board Annual Meeting},
-  year={2018}
+  year={2018},
+  url={download/Lab-Work-predict_delay_rail_sidings_preprint.pdf}
 }
 
 @inproceedings{wu2017congestion,
@@ -60,14 +61,14 @@
   year={2017}
 }
 
-@inproceedings{wang2017comparing,
+@inproceedings{wang2016comparing,
   title={Comparing Traffic State Estimators for Mixed Human and Automated Traffic Flows},
   author={Wang, Ren and Li, Yanning and Work, Daniel B.},
   booktitle={Proceedings of the ITRL Conference on Integrated Transport},
   year={2016}
 }
 
-@article{sterndampening,
+@article{stern2016dampening,
   title={Dampening traffic waves with autonomous vehicles},
   author={Stern, Raphael and Wu, Fangyu and Churchill, Miles and Work, Daniel B. and Delle Monache, Maria Laura and Piccoli, Benedetto and Pohlmann, Hannah and Cui, Shumo and Seibold, Benjamin and Hamilton, Nathan},
   booktitle={Proceedings of the ITRL Conference on Integrated Transport},
@@ -78,7 +79,8 @@
   title={Supporting Automated Operations with Improved Arrival Time Predictions on US Freight Railroads},
   author={Barbour, William and Kuppa, Shankara and Work, Daniel B.},
   booktitle={Proceedings of the ITRL Conference on Integrated Transport},
-  year={2016}
+  year={2016},
+  url={download/Lab-Work-automated_rail_operations.pdf}
 }
 
 @inproceedings{sun2016kalman,
