--- a/_bibliography/conference.bib
+++ b/_bibliography/conference.bib
@@ -1,4 +1,20 @@
 @inproceedings{barbour2019data,
+  title={Data driven methods for effective micromobility parking},
+  author={Barbour, William and Wilbur, Michael and Sandoval, Ricardo and Van Geffen, Caleb and Hall, Brandon and Dubey, Abhishek and Work, Daniel B.},
+  booktitle={Proceedings of the Transportation Research Board Annual Meeting},
+  year={2019},
+  url={download/Lab-Work-scooter_parking_TRB20_preprint.pdf}
+}
+
+@inproceedings{janssen2019comparative,
+  title={Comparative review of peer city scooter policy: city-to-city and temporal assessment},
+  author={Janssen, Caroline and Barbour, William and Hafkenschiel, Erin and Abkowitz, Mark and Philip, Craig and Work, Daniel B.},
+  booktitle={Proceedings of the Transportation Research Board Annual Meeting},
+  year={2019},
+  url={ }
+}
+
+@inproceedings{barbour2019data,
   author = {Barbour, William and Kuppa, Shankara and Work, Daniel B.},
   title = {Data reconciliation of freight rail dispatch data},
   booktitle = {Proceedings of the International Conference on Railway Operations Modelling and Analysis (ICROMA, RailNorrköping)},
