--- a/_bibliography/conference.bib
+++ b/_bibliography/conference.bib
@@ -3,7 +3,7 @@
   author={Barbour, William and Wilbur, Michael and Sandoval, Ricardo and Van Geffen, Caleb and Hall, Brandon and Dubey, Abhishek and Work, Daniel B.},
   booktitle={Proceedings of the Transportation Research Board Annual Meeting},
   year={2019},
-  url={download/Lab-Work-scooter_parking_TRB20_preprint.pdf}
+  url={https://lab-work.github.io/download/Lab-Work-scooter_parking_TRB20_preprint.pdf}
 }
 
 @inproceedings{janssen2019comparative,
@@ -22,7 +22,7 @@
   pages = {99-118},
   year = {2019},
   issn = {1650-3740},
-  url = {download/Lab-Work-rail_data_reconciliation.pdf}
+  url = {https://lab-work.github.io/download/Lab-Work-rail_data_reconciliation.pdf}
 }
 
 @inproceedings{8569406,
@@ -32,7 +32,7 @@
   year={2018},
   pages={2289-2296},
   doi={10.1109/ITSC.2018.8569406},
-  url={download/Lab-Work-deep_learning_rail_eta_preprint.pdf}
+  url={https://lab-work.github.io/download/Lab-Work-deep_learning_rail_eta_preprint.pdf}
 }
 
 @inproceedings{martinez2018predicting,
@@ -40,7 +40,7 @@
   author={Mart{\'\i}nez Mori, Juan Carlos and Barbour, William and Kuppa, Shankara and Work, Daniel B.},
   booktitle={Proceedings of the Transportation Research Board Annual Meeting},
   year={2018},
-  url={download/Lab-Work-predict_delay_rail_sidings_preprint.pdf}
+  url={https://lab-work.github.io/download/Lab-Work-predict_delay_rail_sidings_preprint.pdf}
 }
 
 @inproceedings{wu2017congestion,
@@ -96,7 +96,7 @@
   author={Barbour, William and Kuppa, Shankara and Work, Daniel B.},
   booktitle={Proceedings of the ITRL Conference on Integrated Transport},
   year={2016},
-  url={download/Lab-Work-automated_rail_operations.pdf}
+  url={https://lab-work.github.io/download/Lab-Work-automated_rail_operations.pdf}
 }
 
 @inproceedings{sun2016kalman,
