--- a/_bibliography/conference.bib
+++ b/_bibliography/conference.bib
@@ -1,4 +1,4 @@
-@inproceedings{barbour2019data,
+@inproceedings{barbour2019parking,
   title={Data driven methods for effective micromobility parking},
   author={Barbour, William and Wilbur, Michael and Sandoval, Ricardo and Van Geffen, Caleb and Hall, Brandon and Dubey, Abhishek and Work, Daniel B.},
   booktitle={Proceedings of the Transportation Research Board Annual Meeting},
@@ -24,7 +24,7 @@
   issn = {1650-3740},
   url = {https://lab-work.github.io/download/Lab-Work-rail_data_reconciliation.pdf}
 }
-
+ 
 @inproceedings{8569406,
   author={Barbour, William and Samal, Chinmaya and Kuppa, Shankara and Dubey, Abhishek and Work, Daniel B.},
   title={On the Data-Driven Prediction of Arrival Times for Freight Trains on U.S. Railroads},
