--- a/_bibliography/journal.bib
+++ b/_bibliography/journal.bib
@@ -14,6 +14,22 @@
   url={https://arxiv.org/abs/1902.04983}
 }
 
+@article{wang2020estimating,
+author = {Yanbing Wang and George Gunter and Matthew Nice and Maria Laura Delle Monache and Daniel B. Work},
+title ={Online parameter estimation methods for adaptive cruise control systems},
+journal = {IEEE Transactions on Intelligent Vehicles},
+year = {2020},
+doi = {10.1109/TIV.2020.3023674},
+issn = {2379-8904}
+}
+
+@article{wang2021identifiability,
+  title={Identifiability of car-following dynamics},
+  author={Wang, Yanbing and Delle Monache, Maria Laura and Work, Daniel B.},
+  journal={arXiv preprint 	arXiv:2103.08652},
+  year={2021}
+}
+
 @article{wu2017tracking,
   title={Tracking vehicle trajectories and fuel rates in oscillatory traffic},
   author={Wu, F and Stern, R and Cui, S and Monache, MLD and Bhadanid, R and Bunting, M and Churchill, M and Hamilton, N and Haulcy, R and Piccoli, B and others},
