--- a/_bibliography/conference.bib
+++ b/_bibliography/conference.bib
@@ -35,6 +35,23 @@
   url={https://lab-work.github.io/download/Lab-Work-deep_learning_rail_eta_preprint.pdf}
 }
 
+@inproceedings{wang2019heterogeneous,
+  title={Heterogeneous traffic estimation with particle filtering},
+  author={Wang, Yanbing and Work, Daniel B},
+  booktitle={2019 IEEE Intelligent Transportation Systems Conference (ITSC)},
+  pages={2551--2556},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{wang2020online,
+  title={Online parameter estimation of adaptive cruise control models with delays and lags},
+  author={Wang, Yanbing and Gunter, George and Work, Daniel B},
+  booktitle={2020 IEEE 23rd International Conference on Intelligent Transportation Systems (ITSC)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
 @inproceedings{martinez2018predicting,
   title={Predicting Delay Occurrence at Freight Rail Sidings},
   author={Mart{\'\i}nez Mori, Juan Carlos and Barbour, William and Kuppa, Shankara and Work, Daniel B.},
