--- a/_posts/2021-04-21-AI-DSS.md
+++ b/_posts/2021-04-21-AI-DSS.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Work begins on AI Decision Support System for TDOT corridor management"
-excerpt: "In collaboration with the Southwest Research Institute, we are developing an AI-based decision support tool that will be used for corridor managment on I-24."
+excerpt: "In collaboration with the Southwest Research Institute, we are developing an AI-based decision support tool that will be used for corridor management on I-24."
 date: 2021-04-21
 image: "/images/SwRI_ICM.png"
 ---
