--- a/_bibliography/journal.bib
+++ b/_bibliography/journal.bib
@@ -30,6 +30,17 @@ issn = {2379-8904}
   year={2021}
 }
 
+@ARTICLE{wang2022gaussian,
+  author={Wang, Yanbing and Wang, Ziran and Han, Kyungtae and Tiwari, Prashant and Work, Daniel B.},
+  journal={IEEE Transactions on Intelligent Transportation Systems}, 
+  title={Gaussian Process-Based Personalized Adaptive Cruise Control}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={1-12},
+  doi={10.1109/TITS.2022.3174042}}
+  
+  
 @article{wu2017tracking,
   title={Tracking vehicle trajectories and fuel rates in oscillatory traffic},
   author={Wu, F and Stern, R and Cui, S and Monache, MLD and Bhadanid, R and Bunting, M and Churchill, M and Hamilton, N and Haulcy, R and Piccoli, B and others},
