--- a/_bibliography/journal.bib
+++ b/_bibliography/journal.bib
@@ -30,7 +30,7 @@ issn = {2379-8904}
   year={2021}
 }
 
-@ARTICLE{wang2022gaussian,
+@article{wang2022gaussian,
   author={Wang, Yanbing and Wang, Ziran and Han, Kyungtae and Tiwari, Prashant and Work, Daniel B.},
   journal={IEEE Transactions on Intelligent Transportation Systems}, 
   title={Gaussian Process-Based Personalized Adaptive Cruise Control}, 
@@ -38,7 +38,8 @@ issn = {2379-8904}
   volume={},
   number={},
   pages={1-12},
-  doi={10.1109/TITS.2022.3174042}}
+  doi={10.1109/TITS.2022.3174042}
+}
   
   
 @article{wu2017tracking,
