--- a/_bibliography/conference.bib
+++ b/_bibliography/conference.bib
@@ -1,3 +1,14 @@
+@misc{wang2022automatic,
+  doi = {10.48550/ARXIV.2212.07907},
+  url = {https://arxiv.org/abs/2212.07907},
+  author = {Wang, Yanbing and Gloudemans, Derek and Teoh, Zi Nean and Liu, Lisa and Zachár, Gergely and Barbour, William and Work, Daniel},
+  keywords = {Data Structures and Algorithms (cs.DS), Computer Vision and Pattern Recognition (cs.CV), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Automatic vehicle trajectory data reconstruction at scale},
+  publisher = {arXiv},
+  year = {2022},
+  copyright = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International}
+}
+
 @inproceedings{barbour2019parking,
   title={Data driven methods for effective micromobility parking},
   author={Barbour, William and Wilbur, Michael and Sandoval, Ricardo and Van Geffen, Caleb and Hall, Brandon and Dubey, Abhishek and Work, Daniel B.},
