Change the post to markdown

--- a/_posts/2025-09-18-WaveX.md
+++ b/_posts/2025-09-18-WaveX.md
@@ -10,4 +10,4 @@ Powered by data from the TDOT I-24 MOTION testbed, our team has developed a gene
 
 The peer-reviewed journal article detailing the techinical details was published in Transportation Research Part C: Emerging Technologies. The [article can be found here](https://www.sciencedirect.com/science/article/pii/S0968090X23003005). The dataset described in the TR-C article is now [available for download](https://zenodo.org/records/17122740)!
 
-Building on this work, we have recently received support from the [NVIDIA Academic Grant Program], granting us access to 32,000 hours of A100 GPU compute for further development.
+Building on this work, we have recently received support from the [NVIDIA Academic Grant Program](https://www.nvidia.com/en-us/industries/higher-education-research/academic-grant-program/), granting us access to 32,000 hours of A100 GPU compute for further development.
